--- a/style.css
+++ b/style.css
@@ -61,7 +61,7 @@ article.art-login{
     background-color: #FFFFFF;
 }
 
-/* sec-login design */
+/* form-login design */
 .form-login .txt-login {
     box-sizing: border-box;
     width: 369px;
