--- a/style.css
+++ b/style.css
@@ -1,16 +1,4 @@
-@font-face {
-    font-family: 'SpoqaHanSansNeo-Regular';
-    src: url('https://cdn.jsdelivr.net/gh/projectnoonnu/noonfonts_2108@1.1/SpoqaHanSansNeo-Regular.woff') format('woff');
-    font-weight: normal;
-    font-style: normal;
-}
-
-* {
-    font-family: 'SpoqaHanSansNeo-Regular';
-    color: #767676;
-}
-
-body, article, header, h2, button, form, p, input, div, img, button, a, span {
+body, article, header, h2, form, p, input, div, img, a, span {
     padding: 0;
     margin: 0;
 }
@@ -18,6 +6,11 @@ body, article, header, h2, button, form, p, input, div, img, button, a, span {
 a {
     display: block;
     text-decoration: none;
+}
+
+*{
+    font-family:'SpoqaHanSansNeo', "sans-serif";
+    color: #767676;
 }
 
 /* head-login design */
