--- a/style.css
+++ b/style.css
@@ -1,16 +1,16 @@
-body, article, header, h2, form, p, input, div, img, a, span {
-    padding: 0;
-    margin: 0;
+*{
+    font-family:'SpoqaHanSansNeo', "sans-serif";
+    color: #767676;
 }
 
 a {
     display: block;
     text-decoration: none;
+    color: #767676;
 }
 
-*{
-    font-family:'SpoqaHanSansNeo', "sans-serif";
-    color: #767676;
+body{
+    background-color: #F2F2F2;
 }
 
 /* head-login design */
@@ -18,7 +18,6 @@ article.art-login{
     position: relative;
     box-sizing: border-box;
     width: 520px;
-    height: 712px;
     border: 1px solid #C4C4C4;
     border-radius: 10px;
     background-color: #FFFFFF;
@@ -30,9 +29,7 @@ article.art-login{
 }
 
 .head-login .txt-title{
-    display: flex;
-    width: 144px;
-    height: 20px;
+    width: 100%;
     font-size: 16px;
     font-weight: 500;
     line-height: 20px;
@@ -54,20 +51,23 @@ article.art-login{
 }
 
 /* form-login design */
+.form-login{
+    padding: 26px 24px 25px;
+}
+
 .form-login .txt-login {
     box-sizing: border-box;
-    width: 369px;
-    height: 24px;
+    width: 100%;
     font-size: 20px;
     font-weight: 500;
     line-height: 24px;
     color: #000000;
-    margin: 26px 0 24px 24px;
+    margin-bottom: 24px;
 }
 
 .form-login .input-id, .form-login .input-pw {
     box-sizing: border-box;
-    width: 472px;
+    width: 100%;
     height: 50px;
     font-size: 16px;
     font-weight: 400;
@@ -75,7 +75,7 @@ article.art-login{
     background-color: #FFFFFF;
     border: 1px solid #C4C4C4;
     border-radius: 5px;
-    margin: 0 24px 10px;
+    margin-bottom: 10px;
 }
 
 .input-id::placeholder, .input-pw::placeholder{
@@ -84,11 +84,13 @@ article.art-login{
 
 /* div.remain design */
 div.remain{
-display: flex;
+    display: flex;
 }
 
 .remain .img-remain{
-    margin: 6px 8px 0 28px;
+    margin: 6px 8px 0 4px;
+    width: 22px;
+    height: 22px;
 }
 
 .remain .txt-remain{
@@ -102,8 +104,8 @@ display: flex;
 
 /* button.btn-login design */
 button.btn-login{
-    width: 472px;
-    height: 50px;
+    width: 100%;
+    /* height: 50px; */
     font-size: 18px;
     font-weight: 700;
     line-height: 50px;
@@ -111,16 +113,20 @@ button.btn-login{
     border: none;
     border-radius: 5px;
     background-color: #2F80ED;
-    margin: 20px 24px 0;
+    margin-top: 20px;
+    padding: 0;
 }
 
 /* div.link-help */
 div.link-help{
     display: flex;
+    justify-content: center;
+    align-items: center;
     font-size: 14px;
     font-weight: 400;
     line-height: 18px;
-    margin: 20px 157px 30px 158px;
+    margin: 20px 0 30px;
+
 }
 
 .link-help .find-idpw::before{
@@ -134,32 +140,19 @@ div.link-help{
 }
 
 /* span.txt-or design */
-span.txt-or{
-    display: block;
-    position: relative;
-    text-align: center;
+.txt-or{
+    display: flex;
+    justify-content: center;
+    align-items: center;
     font-size: 14px;
     font-weight: 400;
-    line-height: 18px;
+    gap: 1em;
     margin-bottom: 20px;
 }
 
-span.txt-or::before{
-    position: absolute;
+.txt-or::before, .txt-or::after{
     content: '';
-    top: 10px;
-    left: 24px;
-    width: 210px;
-    height: 1px;
-    background-color: #C4C4C4;
-}
-
-span.txt-or::after{
-    position: absolute;
-    content: '';
-    top: 10px;
-    right: 24px;
-    width: 210px;
+    flex-grow: 1;
     height: 1px;
     background-color: #C4C4C4;
 }
@@ -167,19 +160,18 @@ span.txt-or::after{
 /* a[class^="btn"] design */
 a[class^="btn"]{
 box-sizing: border-box;
-width: 472px;
-height: 50px;
+width: 100%;
 font-size: 16px;
 font-weight: 500;
 line-height: 50px;
 border: 1px solid #767676;
 border-radius: 5px;
 background-color: #FFFFFF;
-margin: 10px 24px 0;
+margin-top: 10px;
+text-align: center;
 }
 
 a[class^="btn"]::before{
-    display: block;
     float: left;
     content: "";
     width: 28px;
@@ -189,7 +181,6 @@ a[class^="btn"]::before{
 
 a.btn-google::before{
     background: url(images/css_sprites.png) -10px -10px;
-    margin-right: 138px;
 }
 
 a.btn-facebook{
@@ -198,7 +189,6 @@ a.btn-facebook{
 
 a.btn-facebook::before{
     background: url(images/css_sprites.png) -58px -10px;
-    margin-right: 123px;
 }
 
 a.btn-naver{
@@ -207,7 +197,6 @@ a.btn-naver{
 
 a.btn-naver::before{
     background: url(images/css_sprites.png) -10px -58px;
-    margin-right: 131px;
 }
 
 a.btn-kakao{
@@ -216,5 +205,4 @@ a.btn-kakao{
 
 a.btn-kakao::before{
     background: url(images/css_sprites.png) -58px -58px;
-    margin-right: 123px;
 }
